# project_layout

./: CMakeLists.txt  README.md  README.org
doc/1_overview/: overview.org
doc/4_configure/: config.org
doc/5_environment/: online_env.org  release.org
docs/1_overview/: overview.org
docs/2_protocol/: protocol_1.org
docs/2_protocol/client/: protocol_1.org
docs/3_dependency/: dependency.org
docs/4_configure/: config.org
docs/5_environment/: online_env.org  test_env.org
docs/6_database/: db.org  table.org
lua/: main.lua
src/: code.lua
test/: test.py
