cmake_minimum_required(VERSION 3.0)
project(example_project VERSION 0.1)

install(DIRECTORY bin/ DESTINATION bin
  FILES_MATCHING
  PATTERN "*.sh" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
  PATTERN "*.cron" PERMISSIONS  OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

install(DIRECTORY sbin/ DESTINATION sbin
  FILES_MATCHING
  PATTERN "*.sh" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
  PATTERN "*.py" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
  PATTERN "*.cron" PERMISSIONS  OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

install(DIRECTORY conf/ DESTINATION conf
  FILES_MATCHING
  PATTERN "*.conf"
  PATTERN "mime.types"
  )

install(DIRECTORY lua/ DESTINATION lua
  FILES_MATCHING
  PATTERN "*.lua")

install(DIRECTORY sql/ DESTINATION sql
  FILES_MATCHING
  PATTERN "*.sql" PERMISSIONS  OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)


set (CPACK_PACKAGE_NAME "example_project")
set (CPACK_PACKAGE_VERDOR "liushangliang")
set (CPACK_PACKAGE_VERSION "0.1.1")
set (CPACK_PACKAGE_DESCRIPTION_SUMMARY "示例服务")
string(TIMESTAMP BUILD_TIME "%Y%m%dT%H%M")
set (CPACK_PACKAGE_FILE_NAME
  ${CPACK_PACKAGE_NAME}_${CPACK_PACKAGE_VERSION}_${BUILD_TIME})
set (CPACK_GENERATOR "TGZ")

include(CPack)
