cmake_minimum_required(VERSION 3.0)
project(example_project VERSION 0.1)

install(DIRECTORY bin/ DESTINATION bin
  FILES_MATCHING
  PATTERN "*.sh" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
  PATTERN "*.cron" PERMISSIONS  OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

install(DIRECTORY sbin/ DESTINATION sbin
  FILES_MATCHING
  PATTERN "*.sh" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
  PATTERN "*.py" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
  PATTERN "*.cron" PERMISSIONS  OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

install(DIRECTORY conf/ DESTINATION conf
  FILES_MATCHING
  PATTERN "*.conf"
  PATTERN "mime.types"
  )

install(DIRECTORY lua/ DESTINATION lua
  FILES_MATCHING
  PATTERN "*.lua")

install(DIRECTORY sql/ DESTINATION sql
  FILES_MATCHING
  PATTERN "*.sql" PERMISSIONS  OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

set (CPACK_GENERATOR "TGZ")

include(CPack)
